src/test/resources/validPrograms/hello_world.frj
main = new Std().print("Hello, World!");