src/test/resources/invalidPrograms/classExists.frj
main = new Foo().bloop(5);